<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btnSendSMS" android:text="@string/btnSendSmsText"></Button>
<Button android:text="@string/btnGetPhoneInfoText" android:id="@+id/btnGetPhoneInfo" android:layout_height="wrap_content" android:layout_width="match_parent"></Button>
<Button android:layout_height="wrap_content" android:id="@+id/btnExecve" android:text="@string/btnExecveText" android:layout_width="match_parent"></Button>
<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btnInternet" android:text="@string/btnInternetText"></Button>
<Button android:text="@string/btnReadCotactText" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btnReadContact"></Button>
<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btnGetLocation" android:text="@string/btnGetLocationText"></Button>
<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btnDial" android:text="@string/btnDialTest"></Button>
<Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btnService" android:text="@string/btnServiceText"></Button>

<Button
    android:id="@+id/btnReflectionTest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Reflection Test" />

<Button android:layout_height="wrap_content" android:id="@+id/btnTest" android:text="@string/btntestText" android:layout_width="match_parent"></Button>
</LinearLayout>
